<?xml version="1.0" encoding="utf-8"?>
	<!--
		Copyright (C) 2010 Joan Puig Sanz Licensed under the Apache License,
		Version 2.0 (the "License"); you may not use this file except in
		compliance with the License. You may obtain a copy of the License at

		http://www.apache.org/licenses/LICENSE-2.0 Unless required by
		applicable law or agreed to in writing, software distributed under the
		License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR
		CONDITIONS OF ANY KIND, either express or implied. See the License for
		the specific language governing permissions and limitations under the
		License.
	-->
<resources>
	<string name="app_name">ServDroid.Web</string>
	<string name="version">0.2.2</string>


	<string name="text_start">Start</string>
	<string name="text_starting">Starting Web Server...</string>
	<string name="text_stopping">Stopping Web Server...</string>
	<string name="text_running">Running</string>
	<string name="text_stopped">Stopped</string>
	<string name="text_port">Port</string>
	<string name="text_status">Status:</string>
	<string name="no_visits">No entries</string>
	<string name="no_hosts">No hosts</string>
	<string name="server_ip">Server IP:</string>
	<string name="table_ip">IP</string>
	<string name="table_path">Path</string>
	<string name="table_time">Time</string>
	<string name="text_server_info">Server information:</string>
	<string name="text_server_info_no_network">You are not connected</string>
	<string name="text_server_info_no_wifi">You are not connected to a Wi-Fi network</string>


	<string name="menu_preferences">Settings</string>
	<string name="menu_log">Show log</string>
	<string name="menu_refresh_log">Refresh log</string>
	<string name="menu_open_browser">Open web browser</string>
	<string name="menu_statics">Statistics</string>
	<string name="menu_save_log">Dump to file</string>
	<string name="menu_help">Help</string>

	<string name="menu_show_more_info">Show more information</string>
	<string name="menu_delete">Delete entry</string>
	<string name="menu_delete_all">Delete all entries</string>
	<string name="menu_clear_list">Clear list</string>
	<string name="menu_add_black_list">Add IP to blacklist</string>
	<string name="menu_add_white_list">Add IP to whitelist</string>

	<string name="enable">Enable</string>
	<string name="disable">Disable</string>
	<string name="enabled">Enabled</string>
	<string name="disabled">Disabled</string>

	<string name="settings_port">Port</string>
	<string name="settings_max_clients">Max clients</string>
	<string name="settings_password">Password</string>
	<string name="settings_white_list">Whitelist</string>
	<string name="settings_black_list">Blacklist</string>
	<string name="settings_www_path">Document path</string>
	<string name="settings_error_path">Error document path</string>
	<string name="settings_log_path">Log path</string>
	<string name="settings_cookies">Any cookie?</string>
	<string name="settings_vibrate">Enable vibration</string>
	<string name="settings_reset_settings">Reset settings</string>

	<string name="accept">Accept</string>
	<string name="cancel">Cancel</string>
	<string name="add_host">Add IP</string>
	<string name="remove_host">Remove host</string>
	<string name="remove">Remove</string>

	<string name="server_log">Server Log</string>
	<string name="log_saved">Log file has been saved in</string>
	<string name="log_not_saved">Error saving log file</string>

	<string name="error_stopping_process">ERROR stopping the process</string>
	<string name="error_starting_process">ERROR starting the process</string>

	<string name="saving_log_progress">Saving log...</string>
	<string name="no_log_entries">No log entries found</string>
	<string name="log_info_1">Displaying </string>
	<string name="log_info_2">entries.</string>

	<string name="press_back_button">Press again to exit and stop the server</string>






	<string name="info_dialog_1">Put HTML documents in the folder</string>
	<string name="info_dialog_2">to serve them to the clients.</string>
	<string name="info_dialog_3">You can change the root path in the Settings menu.
	</string>
	<string name="info_dialog_4">You can also change other application
		parameters in
		the Settings menu.</string>
	<string name="info_dialog_5">Remember for apply any change, ServDroid.Web
		service must be restarted.</string>


	<string name="information">Information</string>






	<string name="title_server_settings">Server settings</string>

	<string name="chose_port">Select port</string>
	<string name="server_port">Server port</string>
	<string name="chose_max_clients">Establish max clients</string>
	<string name="server_max_clients">How many clients can access the server at the same
		time</string>
	<string name="chose_www_path">Set document path</string>
	<string name="server_www_path">Root server path</string>
	<string name="chose_error_path">Set error path</string>
	<string name="server_error_path">Where the error documents (404.html...) are stored
	</string>
	<string name="chose_log_path">Select log path</string>
	<string name="server_log_path">Where the logs are saved</string>
	<string name="vibrate">Vibrate</string>
	<string name="server_vibrate">Set phone to vibrate upon receiving a request
	</string>


	<string name="title_log_settings">Log settings</string>

	<string name="show_entries">Entries to show</string>
	<string name="log_entries">How many entries are to be displayed</string>


	<string name="title_other_settings">Other settings</string>

	<string name="reset_configurations">Reset settings</string>
	<string name="other_reset">Return to default settings</string>
	<string name="reset_configurations_message">This option will reset the ServDroid.web to its
		default settings. Are you sure?</string>

	<string name="about">About</string>
	<string name="other_about">About ServDroid.web</string>


	<!--  V 0.1.3  -->

	<string name="directory_indexing">Directory Indexing</string>
	<string name="server_directory_indexing">Enable directory indexing if index.html doesn\'t exist</string>
	<string name="directory_indexing_get_template">Get template for directory Indexing</string>
	<string name="server_directory_indexing_get_template">Download and install a template for directory indexing</string>
	<string name="directory_indexing_question">Are you sure you want to download and install a template package for directory indexing? (recommended) \n\nIt will overwrite existing files.</string>

	<string name="installing_template">Installing template</string>
	<string name="connecting">Connecting...</string>
	<string name="downloading">Downloading...</string>
	<string name="extracting">Extracting...</string>
	<string name="finish_downloading_extracting">Template downloaded and installed</string>
	<string name="error_finish_downloading_extracting">Error downloading template, try manually from ServDroid web page (http://servdroidweb.googlecode.com).\n\nGo to download page?</string>
	<string name="error">Error</string>
	<string name="web_page">Web page</string>


	<string name="info_dialog_6">To personalise the directory indexing and error page, create a \"default_style.css\" on your www path and create the folder \"icons\" with these file names: css.png, executable.png, go-back.png, pdf.png, script.png, directory.png, file-archiver.png, html.png, picture.png, spreadsheet.png, document.png, file.png, multimedia.png.</string>

	<string name="info_dialog_7">You can find a template at

		http://code.google.com/p/servdroidweb/downloads/list
    </string>

	<string name="release_notes">Release notes</string>
	<string name="release_notes_info">Changes:\n\n
	    -0.2 Autostart options, automatic use of the superuser, bug fixing, Improved web 
	    engine and other applications can connect the web server service (see wiki)\n
	    -0.1.5 Improved web engine\n
	    -0.1.4 Improved web engine and Minor
		bug-fix \n-0.1.3 Improved interface, added
		directory indexing
		options, personalised entries to show in log viewer
		(see settings), new languages (Italian, French and Dutch) and
		Minor bug-fix\n
		-0.1.2 Bug fixes\n
		-0.1.1 first release\n
		-0.1 Testing version
	</string>
	<string name="donate">Donate</string>
	


  <!-- 0.1.5 -->
  	<string name="settings_time_expires_cache">Expiration cache</string>
  	<string name="server_expiration_cache">After how many minutes a page will expire in the browser cache</string>
  
  <!--  0.2 -->
  <string name="settings_autostart">Autostart policy</string>
  <string name="settings_autostart_on_wifi_on">Start server when wifi is on</string>
  <string name="settings_autostart_on_wifi_on_text">Start server automatically when a wifi connection is established</string>
  <string name="settings_autostop_on_wifi_off">Stop server when wifi is off</string>
  <string name="settings_autostop_on_wifi_off_text">Stop the server automatically when is disconnected from the wifi network</string>
  <string name="settings_autostart_on_boot">Autostart on boot</string>
  <string name="settings_autostart_on_boot_text">When the phones turn on, the server will automatically starts</string>
  <string name="settings_show_notification">Show notification</string>
  <string name="settings_show_notification_text">Show a notification when the server starts</string>
  <string name="no_su_permissions">The application is not able to use superuser rights</string>
  <string name="no_iptables">Command "iptables" not found</string>
  <string name="settings_show_ads">Show advertisement</string>
  <string name="settings_show_ads_text">Setup the advertisement behavior</string>
  <string name="about_servdroid.web">
	    ServDroid.web is an Android static web server. This is an open source project.\n\n
		ServDroid.web was developed by Joan Puig Sanz.
		\n\nMore information at http://code.google.com/p/servdroidweb/
		\n\nEspecial thanks
		for translations to Steve Watts, Kim Del Rio, Asgeir Oskarsson, Enrico Orsini, Jan Dunkerbeck, 
		Francesca Fontana, Pierre Ducoudray, Gianluca Tranchedone, Marc Abbink, Tatiana Marechale and Alfred Ferrer.
		\n\nPlease consider making a donation.</string>
  <string name="donate_info">
      As this project is open source, it does not generate any revenue or profit with which to fund improvements.\n\n
      If you like ServDroid.Web, it would be nice if you could support the project with a donation.\n\n
      Thank you!</string>
  <string name="thanks_you">Thank you!</string>
  
</resources>
